--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.3.3",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-1": "^6.22.0"
   },
