--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-docs",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "author": "Andrew J. Monks <a@monks.co>",
   "license": "ISC",
   "files": [
@@ -11,11 +11,7 @@
   },
   "main": "lib/index.js",
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.3",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-stage-1": "^6.22.0"
+    "babel-preset-env": "^1.3.3"
   },
   "dependencies": {
     "babel-runtime": "^6.22.0",
