--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.22.0",
+    "globby": "^8.0.1",
     "markdown-toc": "^1.1.0",
     "ramda": "^0.23.0",
     "shelljs": "^0.7.7"
